--- a/first-assignment/src/App.css
+++ b/first-assignment/src/App.css
@@ -7,3 +7,8 @@
   margin: 10px;
   box-shadow: 2px 1px 3px .1px black;
 }
+
+#sample-comp-container{
+  border: 1px solid black;
+  margin: 10px;
+}
